# ECE365_Object_Oriented_Course_Project

./: .gitignore  CMakeLists.txt  README.md  maze.txt  run.sh  run_given_tests.sh
include/: maze.hpp  path.hpp  path_traversal.hpp  point.hpp
src/: CMakeLists.txt  main.cpp  maze.cpp  path.cpp  path_traversal.cpp  point.cpp
tests/: CMakeLists.txt  basic_test.cpp  point_test.cpp
tests/Test00_FilesDontExistOrWrongFormat/: run.bat
tests/Test07_InvalidContentsInMazeFile_TopLeftIs0/: run.bat
